Sprites alignment fixes

--- a/themes/bootstrap/scss/partials/_sprites.scss
+++ b/themes/bootstrap/scss/partials/_sprites.scss
@@ -54,81 +54,81 @@ $twentytwo-spacing: 16px;
 }
 
 .projects-icon {
-  @include small-icon($icons-sprites, projects, 0, 5);
+  @include small-icon($icons-sprites, projects, 0, 1);
 }
 
 .activity-icon {
-  @include small-icon($icons-sprites, time, 0, 5);
+  @include small-icon($icons-sprites, time, 0, 1);
 }
 
 .overview-icon {
-  @include small-icon($icons-sprites, positive, 0, 5);
+  @include small-icon($icons-sprites, positive, 0, 1);
 }
 
 .issues-icon {
-  @include small-icon($icons-sprites, ticket, 0, 4);
+  @include small-icon($icons-sprites, ticket, 0, 1);
 }
 
 .code-icon {
-  @include small-icon($icons-sprites, changeset, 0, 5);
+  @include small-icon($icons-sprites, changeset, 0, 1);
 }
 
 .settings-icon {
-  @include small-icon($icons-sprites, admin, 0, 5);
+  @include small-icon($icons-sprites, admin, 0, 1);
 }
 
 .roadmap-icon {
-  @include small-icon($icons-sprites, package, 0, 4);
+  @include small-icon($icons-sprites, package, 0, 1);
 }
 
 .members-icon {
-  @include small-icon($icons-sprites, user, 0, 4);
+  @include small-icon($icons-sprites, user, 0, 1);
 }
 
 .Bug-icon {
-  @include small-icon($icons-sprites, Bug, 0, 6);
+  @include small-icon($icons-sprites, Bug, 0, 1);
 }
 
 .Feature-icon {
-  @include small-icon($icons-sprites, Feature, 0, 6);
+  @include small-icon($icons-sprites, Feature, 0, 1);
 }
 
 dt.issue-attachment {
   padding-left: 17px;
-  background: sprite($icons-sprites, attachment, 0, 10) no-repeat;
+  background: sprite($icons-sprites, attachment, 0, 3) no-repeat;
 }
 
 dt.changeset {
   padding-left: 17px;
-  background: sprite($icons-sprites, changeset, 0, 10) no-repeat;
+  background: sprite($icons-sprites, changeset, 0, 3) no-repeat;
 }
 
 dt.issue-new {
   padding-left: 17px;
-  background: sprite($icons-sprites, ticket, 0, 10) no-repeat;
+  background: sprite($icons-sprites, ticket, 0, 3) no-repeat;
 }
 
 dt.issue-change {
   padding-left: 17px;
-  background: sprite($icons-sprites, ticket-edit, 0, 10) no-repeat;
+  background: sprite($icons-sprites, ticket-edit, 0, 3) no-repeat;
 }
 
 dt.issue-note {
   padding-left: 17px;
-  background: sprite($icons-sprites, ticket-note, 0, 10) no-repeat;
+  background: sprite($icons-sprites, ticket-note, 0, 3) no-repeat;
 }
 
 dt.issue-resolved {
   padding-left: 17px;
-  background: sprite($icons-sprites, ticket-checked, 0, 10) no-repeat;
+  background: sprite($icons-sprites, ticket-checked, 0, 3) no-repeat;
 }
 
 dt.issue-rejected {
   padding-left: 17px;
-  background: sprite($icons-sprites, ticket-crossed, 0, 10) no-repeat;
+  background: sprite($icons-sprites, ticket-crossed, 0, 3) no-repeat;
 }
 
 .big-icon-projects {
   padding-left: 24px;
-  background: sprite($twentytwo-sprites, projects, 0, 2) no-repeat;
+  background: sprite($twentytwo-sprites, projects, 0, 3) no-repeat;
 }
